# MoPAT_Design

./: .gitignore  README.md  calibrate.py  example_node.py  import_mask_params.py  mask parameters  node_format.py  requirements.txt  run_webui.py  server.py
Multi-Client TCP Server/: client.py  server.py
ROS2/mopat_pkg/: package.xml  setup.cfg  setup.py
ROS2/mopat_pkg/launch/: main_launch.py  sim_launch.py
ROS2/mopat_pkg/mopat_pkg/: cam_test.py  camera_node.py  config_space_node.py  discretization_node.py  import_mask_params.py  localization_node.py  mopat_astar_ros.py  mopat_lib.py  motion_planner_node.py  occ_map_node.py  plot_node.py  simulator_node.py  simulator_node_new.py  simulator_node_old.py  stream_node.py  webstreaming.py
ROS2/mopat_pkg/mopat_pkg/algorithms/: detect_blob.py  localize.py  mopat_lib.py  videocap.py
ROS2/mopat_pkg/mopat_pkg/data/: mask_parameters
ROS2/mopat_pkg/mopat_pkg/static/: jquery.min  myscript.js
WebUI/: __init__.py  routes.py  webstreaming.py
algorithms/: MOPAT_astar.py  PurePursuit.c  Pure_pursuit.py  RFD.py  bot_detection.py  config_space.py  draw_tools.py  mopat_astar.py  mopat_astar_ros.py  mopat_dijkstras.py  obj_det_aruco.py
identification_node/: ID.py  ID_calib.py
localization_node/: detect_blob.py  import_mask_params.py  localise.py
mopat_pkg/: CMakeLists.txt  package.xml
nodemcu_client/: nodemcu_client.ino
nodemcu_control/: nodemcu_control.ino
ros_src/: config_reader_test.py  config_space_node.py  config_space_node_Mk2.py  cv_bridge_try.py  formation_sim_node.py  launch_mopat.py  mopat_lib.py  n_lis.py  (+6 more)
(+76 files in other folders)
