<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mopat_pkg</name>
  <version>5.1.0</version>
  <description>"ROS2 Package for MoPAT system"</description>
  <maintainer email="guining.pertin.iitg@gmail.com">otoshuki</maintainer>
  <license>TODO</license>

  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
